
(rule
 (deps (:< vlt_ppx.ml.cppo))
 (targets vlt_ppx.ml)
 (action
  (with-stdout-to
   %{targets}
   (run %{bin:cppo} -V "PPXLIB:%{version:ppxlib}" %{<})
  )
 )
)

(library
 (public_name vlt.ppx)
 (name vlt_ppx)
 (kind ppx_rewriter)
 (modules vlt_ppx)
 (instrumentation.backend
  (ppx vlt.ppx))
 (libraries ppxlib)
 (preprocess
  (pps ppxlib.metaquot))
)
