(rule
 (targets aux.cmo)
 (deps (:aux aux.ml) %{workspace_root}/vlt.install)
 (action
  (run
   ocamlfind ocamlc -for-pack Pack -c %{aux}
    -package vlt.ppx,vlt -ppxopt "vlt.ppx,-for-pack Pack"))
)

(rule
 (targets main.cmo)
 (deps (:main main.ml) aux.cmo %{workspace_root}/vlt.install)
 (action
  (run
   ocamlfind ocamlc -for-pack Pack -c %{main}
    -package vlt.ppx,vlt -ppxopt "vlt.ppx,-for-pack Pack"))
)

(rule
 (target main.exe)
 (deps aux.cmo main.cmo)
 (action (run ocamlfind ocamlc -o %{target} %{deps} -package unix,dynlink,vlt -linkpkg))
)

(cram
 (deps main.exe (glob_files *.conf) (glob_files *.reference))
)