(rule
 (targets custom.cmo)
 (deps (:src custom.ml) %{workspace_root}/vlt.install)
 (action
  (run ocamlfind ocamlc -for-pack Pack -c %{src} -package vlt.ppx,vlt))
)

(rule
 (targets aux_.cmo)
 (deps (:src aux_.ml) %{workspace_root}/vlt.install)
 (action
  (run
   ocamlfind ocamlc -for-pack Pack -c %{src}
    -package vlt.ppx,vlt -ppxopt "vlt.ppx,-for-pack Pack"))
)

(rule
 (targets main.cmo)
 (deps (:src main.ml) aux_.cmo %{workspace_root}/vlt.install)
 (action
  (run
   ocamlfind ocamlc -for-pack Pack -c %{src}
    -package vlt.ppx,vlt -ppxopt "vlt.ppx,-for-pack Pack"))
)

(rule
 (target main.exe)
 (deps custom.cmo aux_.cmo main.cmo)
 (action (run ocamlfind ocamlc -o %{target} %{deps} -package unix,dynlink,vlt -linkpkg))
)

(cram
 (deps main.exe (glob_files *.conf) (glob_files *.reference))
)