(rule
 (targets main.cmo)
 (deps (:src main.ml) %{workspace_root}/vlt.install)
 (action
  (run
   ocamlfind ocamlc -thread -for-pack Pack -c %{src}
    -package vlt.ppx,vlt -ppxopt "vlt.ppx,-for-pack Pack"))
)

(rule
 (target main.exe)
 (deps main.cmo)
 (action (run ocamlfind ocamlc -o %{target} %{deps} -thread -package unix,dynlink,vlt -linkpkg))
)

(cram
 (deps main.exe (glob_files *.conf) (glob_files *.reference))
)