(rule
 (targets aux_.cmo)
 (deps (:aux aux_.ml) %{workspace_root}/vlt.install)
 (action
  (run
   ocamlfind ocamlc -for-pack Pack -c %{aux}
    -package vlt.ppx,vlt -ppxopt "vlt.ppx,-for-pack Pack"))
)

(rule
 (targets main.cmo)
 (deps (:main main.ml) aux_.cmo %{workspace_root}/vlt.install)
 (action
  (run
   ocamlfind ocamlc -for-pack Pack -c %{main}
    -package vlt.ppx,vlt -ppxopt "vlt.ppx,-for-pack Pack"))
)

(rule
 (target main.exe)
 (deps aux_.cmo main.cmo)
 (action (run ocamlfind ocamlc -o %{target} %{deps} -package unix,dynlink,vlt -linkpkg))
)

(cram
 (deps main.exe)
)