(executable
 (name ppx)
 (modules ppx)
 (libraries vlt.ppx ppxlib)
)

(rule
 (target daikon.out)
 (deps (:ppx ppx.exe) (:src daikon.ml) %{workspace_root}/vlt.install)
 (action
  (with-stderr-to %{target}
   (run ocamlfind ocamlc -dsource -ppx ./%{ppx} -c %{src} -package vlt)
  )
 )
)

(rule
 (alias runtest)
 (action (diff daikon.expected daikon.out))
)
