(executable
 (name ppx)
 (modules ppx)
 (libraries vlt.ppx ppxlib)
)

(rule
 (target inv_msg.out)
 (deps (:ppx ppx.exe) (:in inv_msg.ml))
 (action
  (progn
   (system "ocamlfind ocamlc -color never -ppx ./%{ppx} -c %{in} -package vlt 2> %{target} || true")
   (system "sed -i -e 's/\"int\"/int/g;s/\"string\"/string/g;' inv_msg.out")
  )
 )
)

(rule
 (alias runtest)
 (action (diff inv_msg.expected inv_msg.out))
)
