(executable
 (name ppx)
 (modules ppx)
 (libraries vlt.ppx ppxlib)
)

(rule
 (target inv_exception.out)
 (deps (:ppx ppx.exe) (:in inv_exception.ml) %{workspace_root}/vlt.install)
 (action
  (progn
   (system "ocamlfind ocamlc -color never -ppx ./%{ppx} -c %{in} -package vlt 2> %{target} || true")
   (system "sed -i -e 's/The constant \"10\"/This expression/;s/\"int\"/int/g;s/\"string\"/string/g;s/\"exn\"/exn/g' inv_exception.out")
  )
 )
)

(rule
 (alias runtest)
 (action (diff inv_exception.expected inv_exception.out))
)
