(executable
 (name ppx)
 (modules ppx)
 (libraries vlt.ppx ppxlib)
)

(rule
 (target inv_name.out)
 (deps (:ppx ppx.exe) (:in inv_name.ml) %{workspace_root}/vlt.install)
 (action
  (system "ocamlfind ocamlc -color never -ppx ./%{ppx} -c %{in} -package vlt 2> %{target} || true")
 )
)

(rule
 (alias runtest)
 (action (diff inv_name.expected inv_name.out))
)
