(executable
 (name ppx)
 (modules ppx)
 (libraries vlt.ppx ppxlib)
)

(rule
 (target inv_properties.out)
 (deps (:ppx ppx.exe) (:in inv_properties.ml) %{workspace_root}/vlt.install)
 (action
  (progn
   (system "ocamlfind ocamlc -color never -ppx ./%{ppx} -c %{in} -package vlt 2> %{target} || true")
   (system "sed -i -e 's/The constant \"0\"/This expression/;s/\"int\"/int/g;s/\"(string \\* string) list\"/(string * string) list/g' inv_properties.out")
  )
 )
)

(rule
 (alias runtest)
 (action (diff inv_properties.expected inv_properties.out))
)
